<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="@string/h1_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="10dp"
            android:textSize="14sp"
            android:text="@string/p1_usage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="@string/h1_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="10dp"
            android:textSize="14sp"
            android:text="@string/p1_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="@string/h1_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="10dp"
            android:textSize="14sp"
            android:autoLink="web"
            android:text="@string/p1_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="@string/h1_contect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="10dp"
            android:textSize="14sp"
            android:autoLink="web"
            android:text="@string/p1_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:padding="10dp"
            android:src="@mipmap/qq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>



</ScrollView>